# zenml-learn

./: README.md
starter-new-pipeline/: Readme.md  artifact-run.py  cached-run.py  pyproject.toml  run.py
zenml-docker-deploy/: README.md  docker-compose.yml  pyproject.toml
zenml-rag-85/: pyproject.toml  run.py
